Test tweaks.